--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,6 @@ phases:
   post_build:
     commands:
       - echo "Uploading to S3"
-      - aws s3 cp build_${VERSION}.zip s3://baskaran-build-artifactse/releases/
+      - aws s3 cp build_${VERSION}.zip s3://baskaran-build-artifactse/releases/*
 
 
